Fixing bug 298098. currentScale and currentTranslate should be in viewPort coordinates. r=tor@acm.org a=chofmann@gmail.com